feat : add + in place dto response longitude and latitutde - add place name search